@@ -12,6 +12,7 @@ SVN
 -bug#0001899: spine treats undef replies as 0
 -bug#0001968: Spine Error with Cisco FWSM firewalls
 -bug#0001974: PRIV_PROC_EXEC is required for Spine on Solaris 10 
+-bug#0002059: Spine doing too many (80+) connections when polling 
 -bug: Net-snmp API issues cause spine crashes with some SNMP agents
 -bug: Host list not properly initialized
 -bug: Mutex locking issues cause deadlocks in Windows
